--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -1,2 +1,16 @@
 body
-    background: brown
+    background-image: url('../img/bricks2.jpg')
+
+.Main
+    width: 100vw
+    height: 100vh
+    display: flex
+    justify-content: center
+    align-items: center
+    flex-wrap: wrap
+
+    &__block
+        width: 300px
+        height: 300px
+        margin: 30px
+        background: white
