--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -1,16 +1,135 @@
+
 body
-    background-image: url('../img/bricks2.jpg')
+    //background-image: url('../img/bricks2.jpg')
+    background-color: #2C2C2C
+
+a
+    color: white
+    text-decoration: none
+
+    &:hover
+        color: white
+
+img
+    width: 100%
 
 .Main
     width: 100vw
-    height: 100vh
+    padding: 100px 0
+    min-height: 100vh
     display: flex
     justify-content: center
     align-items: center
     flex-wrap: wrap
 
     &__block
+        text-align: center
         width: 300px
         height: 300px
         margin: 30px
-        background: white
+
+.button
+    cursor: pointer
+	float: left
+	min-width: 150px
+	max-width: 250px
+	display: block
+	margin: 1em
+	padding: 1em 2em
+	border: none
+	background: none
+	color: inherit
+	vertical-align: middle
+	position: relative
+	z-index: 1
+	-webkit-backface-visibility: hidden
+	-moz-osx-font-smoothing: grayscale
+
+.button:focus
+	outline: none
+
+.button > span
+	vertical-align: middle
+
+.button--ujarak
+	-webkit-transition: border-color 0.4s, color 0.4s
+	transition: border-color 0.4s, color 0.4s
+
+.button--ujarak::before
+	content: ''
+	position: absolute
+	top: 0
+	left: 0
+	width: 100%
+	height: 100%
+	background: #37474f
+	z-index: -1
+	opacity: 0
+	-webkit-transform: scale3d(0.7, 1, 1)
+	transform: scale3d(0.7, 1, 1)
+	-webkit-transition: -webkit-transform 0.4s, opacity 0.4s
+	transition: transform 0.4s, opacity 0.4s
+	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1)
+	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1)
+
+.button--ujarak.button--round-s::before
+	border-radius: 2px
+
+.button--ujarak.button--inverted::before
+	background: #7986CB
+
+.button--ujarak,
+.button--ujarak::before
+	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1)
+	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1)
+
+.button--ujarak:hover
+	color: #fff
+	border-color: #37474f
+
+.button--ujarak.button--inverted:hover
+	color: #37474F
+	border-color: #fff
+
+.button--ujarak:hover::before
+    background: white
+	opacity: 1
+	-webkit-transform: translate3d(0, 0, 0)
+	transform: translate3d(0, 0, 0)
+
+
+@import './custom.styl'
+@import './red.styl'
+@import 'components/Footer'
+@import 'components/Contacts'
+
+// override custom.styl
+.nav-tabs > li.active 
+    & > a,
+    & > a:hover,
+    & > a:focus
+        background: #2C2C2C
+
+.feature_header
+    text-align: left
+
+    .feature_title
+        margin: 0 
+        display: inline-block
+
+.single-feature
+    background: #eee
+    transition: none
+
+    &:after
+        transition: none
+
+.single-feature:hover
+    background: #EE3B24
+
+
+    h4, p, i, &::after
+       color: white 
+
+    &:after
+        background: #EE3B24 !important
