make footer partial and include it in the layout view

--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -3,6 +3,11 @@ body
     //background-image: url('../img/bricks2.jpg')
     background-color: #2C2C2C
 
+input,
+textarea
+    border-color: #eee !important
+    outline: none
+
 a
     color: white
     text-decoration: none
@@ -12,6 +17,23 @@ a
 
 img
     width: 100%
+
+#contact
+    min-height: calc(100vh - 70px)
+
+input:hover,
+textarea:hover,
+input:focus,
+textarea:focus
+    border-color: #ee3b24 !important
+
+.footer_b
+    border-top: 2px solid #EE3B24 !important
+
+section
+    display: flex
+    justify-content: center
+    align-items: center
 
 .Main
     width: 100vw
