--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,11 @@
 body {
   background-color: #2c2c2c;
 }
+input,
+textarea {
+  border-color: #eee !important;
+  outline: none;
+}
 a {
   color: #fff;
   text-decoration: none;
@@ -10,6 +15,26 @@ a:hover {
 }
 img {
   width: 100%;
+}
+#contact {
+  min-height: calc(100vh - 70px);
+}
+input:hover,
+textarea:hover,
+input:focus,
+textarea:focus {
+  border-color: #ee3b24 !important;
+}
+.footer_b {
+  border-top: 2px solid #ee3b24 !important;
+}
+section {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
 }
 .Main {
   width: 100vw;
