add logo to navbar

--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -138,6 +138,12 @@ section
     .feature_title
         margin: 0 
         display: inline-block
+       // font-size: 26px
+
+.nav-logo
+    font-size: 22px
+    width: auto
+    padding: 0
 
 .single-feature
     background: #eee
