--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2742,6 +2742,11 @@ textarea:hover {
   margin: 0;
   display: inline-block;
 }
+.nav-logo {
+  font-size: 22px;
+  width: auto;
+  padding: 0;
+}
 .single-feature {
   background: #eee;
   transition: none;
