--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -31,9 +31,11 @@ textarea:focus
     border-top: 2px solid #EE3B24 !important
 
 section
+    background: white
     display: flex
     justify-content: center
     align-items: center
+    min-height: calc(100vh - 70px)
 
 .Main
     width: 100vw
