--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -12,14 +12,12 @@ a
     color: white
     text-decoration: none
 
-    &:hover
+    &:hover,
+    &:focus
         color: white
 
 img
     width: 100%
-
-#contact
-    min-height: calc(100vh - 70px)
 
 input:hover,
 textarea:hover,
@@ -35,7 +33,10 @@ section
     display: flex
     justify-content: center
     align-items: center
-    min-height: calc(100vh - 70px)
+    min-height: calc(100vh - 77px) !important
+
+.section-main
+    background: #2C2C2C
 
 .Main
     width: 100vw
