--- a/resources/assets/stylus/components/Footer.styl
+++ b/resources/assets/stylus/components/Footer.styl
@@ -1,11 +1,15 @@
 .Footer
+    &__menu-link
+        color: #aaa 
+
+        &:hover,
+        &:active,
+        &:focus
+            color: #EE3B24
+            cursor: pointer
+
     &__menu-item
         display: inline-block
         margin-right: 30px
         font-size: 16px
-        margin: 25px 30px 25px 0
-
-        &:hover
-            color: #EE3B24
-            cursor: pointer
-
+        margin: 25px 15px
