--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -23,7 +23,7 @@ img
 .top-line
     min-height: 30px
     text-align: left
-    color: #aaa 
+    color: #DBDBDB
     font-weight: bold
     font-size: 14px
     padding-top: 4px
@@ -54,10 +54,11 @@ section
     display: flex
     justify-content: center
     align-items: center
-    min-height: calc(100vh - 177px) !important
+    min-height: calc(100vh - 100px) !important
 
 .section-main
     background: #2C2C2C
+    min-height: calc(100vh - 77px) !important
 
 .Main
     width: 100vw
