--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -149,6 +149,7 @@ section
 @import './red.styl'
 @import 'components/Footer'
 @import 'components/Contacts'
+@import 'components/Button'
 
 // override custom.styl
 .nav-tabs > li.active 
