--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -193,3 +193,23 @@ section
     &:after
         background: #EE3B24 !important
 
+
+// pagination
+.pagination>li>a,
+.pagination>li>span
+    color: black
+
+.pagination>li>a:focus,
+.pagination>li>a:hover,
+.pagination>li>span:focus,
+.pagination>li>span:hover
+    color: black
+
+.pagination>.active>a,
+.pagination>.active>a:focus,
+.pagination>.active>a:hover,
+.pagination>.active>span,
+.pagination>.active>span:focus,
+.pagination>.active>span:hover
+    background-color: #EE3B24
+    border-color: #EE3B24
