--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -41,8 +41,6 @@ img
     background: #EE3B24 !important
     margin-top: 15px
 
-    
-
 input:hover,
 textarea:hover,
 input:focus,
@@ -57,6 +55,7 @@ section
     display: flex
     justify-content: center
     align-items: center
+    padding: 50px 0
     min-height: calc(100vh - 177px) !important
 
 .section-main
