--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -22,7 +22,13 @@ a
 img
     width: 100%
 
-// header
+.tab-content img
+    width: 400px !important
+    margin: 0 auto
+
+#header
+    border-bottom: 1px solid #555
+
 .top-line
     min-height: 30px
     text-align: left
@@ -47,9 +53,6 @@ input:focus,
 textarea:focus
     border-color: #ee3b24 !important
 
-.footer_b
-    border-top: 2px solid #EE3B24 !important
-
 section
     background: white
     display: flex
@@ -60,7 +63,8 @@ section
 
 .section-main
     background: #2C2C2C
-    min-height: calc(100vh - 77px) !important
+    min-height: calc(100vh - 177px)
+    padding: 0
 
 .Main
     width: 100vw
