--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -1,3 +1,5 @@
+h3
+    text-transform: none !important
 
 body
     //background-image: url('../img/bricks2.jpg')
@@ -21,6 +23,10 @@ a
 
 img
     width: 100%
+
+#service
+    padding-top: 0 !important
+    padding-bottom: 0 !important
 
 .tab-content img
     width: 400px !important
@@ -63,7 +69,7 @@ section
 
 .section-main
     background: #2C2C2C
-    min-height: calc(100vh - 177px)
+    min-height: calc(100vh - 77px) !important
     padding: 0
 
 .Main
@@ -162,7 +168,7 @@ section
     & > a,
     & > a:hover,
     & > a:focus
-        background: #2C2C2C
+        background: #EE3B24
 
 .feature_header
     text-align: left
