--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31,12 +31,31 @@ img {
   width: 400px !important;
   margin: 0 auto;
 }
+.contacts {
+  display: inline-block;
+  margin-left: 30px;
+  font-size: 16px;
+  font-weight: bold;
+  padding-top: 0;
+  color: #aaa;
+  height: 100%;
+}
+@media screen and (min-width: 768px) {
+  .navbar-header {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: justify;
+        justify-content: space-between;
+    -ms-flex-align: center;
+        align-items: center;
+  }
+}
 .top-line {
   min-height: 30px;
-  text-align: left;
+  text-align: right;
   color: #fff;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 14px;
   padding-top: 4px;
   background: #ee3b24;
   font-weight: bold;
@@ -2787,7 +2806,12 @@ textarea:hover {
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus {
-  color: #ff4c35 !important;
+  background: #ee3b24;
+  color: #fff !important;
+}
+.navbar-inverse .navbar-nav > li > a {
+  padding: 15px;
+  color: #fff !important;
 }
 .feature_header {
   text-align: left;
