--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -179,6 +179,22 @@ section
 @import 'components/Contacts'
 @import 'components/Button'
 
+ul.navbar-nav > li > a:hover
+    background: #EE3B24 !important
+    color: white !important
+
+h1
+    text-transform: uppercase
+    text-align: center
+    color: #5A5A5A
+
+h3
+    font-size: 36px
+
+.divider
+    margin-bottom: 50px
+
+
 .navbar-inverse .navbar-nav > .active
     > a,
     > a:hover,
