--- a/public/css/app.css
+++ b/public/css/app.css
@@ -34,11 +34,16 @@ img {
 .contacts {
   display: inline-block;
   margin-left: 30px;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
   padding-top: 0;
   color: #aaa;
   height: 100%;
+}
+@media screen and (max-width: 768px) {
+  .contacts {
+    padding: 10px 0;
+  }
 }
 @media screen and (min-width: 768px) {
   .navbar-header {
@@ -49,6 +54,10 @@ img {
     -ms-flex-align: center;
         align-items: center;
   }
+}
+.submenu li {
+  display: inline-block;
+  padding: 5px 10px;
 }
 .top-line {
   min-height: 30px;
@@ -2806,6 +2815,11 @@ textarea:hover {
 ul.navbar-nav > li > a:hover {
   background: #ee3b24 !important;
   color: #fff !important;
+}
+@media screen and (max-width: 768px) {
+  ul.navbar-nav > li > a {
+    display: block;
+  }
 }
 h1 {
   text-transform: uppercase;
