--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -53,7 +53,30 @@ img
 .submenu
     li
         display: inline-block
-        padding: 5px 10px
+        padding: 10px
+        cursor: pointer
+
+        &:hover
+            a
+                color: #ddd
+
+.page
+    background: white
+    padding: 50px
+
+
+.chimney
+    margin: 50px 0
+    clear: fix
+
+.subheading_main
+    font-weight: bold
+    color: white
+    text-align: right
+    margin-right: 15px
+
+.tab-content
+    margin-top: 150px
 
 .top-line
     min-height: 30px
@@ -64,7 +87,7 @@ img
     padding-top: 4px
     background: #EE3B24
     font-weight: bold
-    padding: 10px 0
+    padding: 0
 
     span
         margin: 0 10px
@@ -94,7 +117,7 @@ section
 .section-main
     background: #2C2C2C
     min-height: calc(100vh - 77px) !important
-    padding: 0
+    padding: 0 0 50px 0
 
 .Main
     width: 100vw
