--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -69,6 +69,11 @@ img
     margin: 50px 0
     clear: fix
 
+.flex-block
+    display: flex
+    flex-direction: vertical
+    justify-content: space-between
+
 .subheading_main
     font-weight: bold
     color: white
