--- a/resources/assets/stylus/components/Button.styl
+++ b/resources/assets/stylus/components/Button.styl
@@ -1,8 +1,8 @@
 .Button
-    background-color: #EE3B24
+    background-color: #ee8b24
 
-    &:hover
+    &:hover,
     &:active,
     &:focus
-        background-color: darken(#EE3B24, 15%)
+        background-color: darken(#ee8b24, 15%)
         color: white
