add price table under each chimney

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,6 +4,10 @@ h3 {
 body {
   background-color: #2c2c2c;
 }
+.table-block {
+  overflow: auto;
+  padding: 0;
+}
 input,
 textarea {
   border-color: #eee !important;
@@ -2878,6 +2882,13 @@ h3 {
 }
 .thumbnail {
   border: none;
+}
+.table {
+  margin-top: 30px;
+  font-size: 12px;
+}
+tr td:first-child {
+  font-weight: bold;
 }
 .item-img {
   max-height: 240px;
