--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -5,6 +5,10 @@ body
     //background-image: url('../img/bricks2.jpg')
     background-color: #2C2C2C
 
+.table-block
+    overflow: auto
+    padding: 0
+
 input,
 textarea
     border-color: #eee !important
@@ -249,6 +253,13 @@ h3
 
 .thumbnail
     border: none
+
+.table
+    margin-top: 30px
+    font-size: 12px
+
+tr td:first-child
+    font-weight: bold
 
 .item-img
     max-height: 240px
