add login logic

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,6 +13,9 @@ textarea {
   border-color: #eee !important;
   outline: none;
 }
+.hidden {
+  visibility: hidden;
+}
 a {
   color: #fff;
   text-decoration: none;
