--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -14,6 +14,9 @@ textarea
     border-color: #eee !important
     outline: none
 
+.hidden
+    visibility: hidden
+
 a
     color: white
     text-decoration: none
