--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -90,6 +90,10 @@ img
 .tab-content
     margin-top: 150px
 
+.search
+    i
+        color: #EE8B24
+
 .search_input
     border: none 
     height: 30px
