display listing of all chimneys in admin area and create resourceful routes for ChimneysController

--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -5,6 +5,9 @@ body
     //background-image: url('../img/bricks2.jpg')
     background-color: #2C2C2C
 
+.description
+    font-size: 18px
+
 .table-block
     overflow: auto
     padding: 0
