--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,6 +4,9 @@ h3 {
 body {
   background-color: #2c2c2c;
 }
+.description {
+  font-size: 18px;
+}
 .table-block {
   overflow: auto;
   padding: 0;
