--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -12,6 +12,9 @@ body
     overflow: auto
     padding: 0
 
+textarea
+    height: 300px !important
+
 input,
 textarea
     border-color: #eee !important
@@ -72,7 +75,7 @@ img
 
 .page
     background: white
-    padding: 50px
+    padding: 50px 0
 
 
 .chimney
