add flash partial and improve styles of forms

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,11 @@
 h3 {
   text-transform: none !important;
 }
+input.form-control,
+textarea.form-control,
+select.form-control {
+  border-color: #868686 !important;
+}
 body {
   background-color: #2c2c2c;
 }
