--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -1,6 +1,11 @@
 h3
     text-transform: none !important
 
+input.form-control,
+textarea.form-control,
+select.form-control
+    border-color: #868686 !important
+
 body
     //background-image: url('../img/bricks2.jpg')
     background-color: #2C2C2C
