add ability to save images for chimneys

--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -15,10 +15,13 @@ body
 
 .table-block
     overflow: auto
-    padding: 0
 
 textarea
     height: 300px !important
+
+.thumb
+    max-width: 400px
+    margin-top: 20px
 
 input,
 textarea
@@ -86,6 +89,10 @@ img
 .chimney
     margin: 50px 0
     clear: fix
+    border: 1px solid #E0E0E0
+    padding: 20px
+    background: #F3F3F3
+    border-radius: 4px
 
 .flex-block
     display: flex
@@ -275,6 +282,7 @@ h3
 .table
     margin-top: 30px
     font-size: 12px
+    //border: 1px solid black
 
 tr td:first-child
     font-weight: bold
