--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14,10 +14,13 @@ body {
 }
 .table-block {
   overflow: auto;
-  padding: 0;
 }
 textarea {
   height: 300px !important;
+}
+.thumb {
+  max-width: 400px;
+  margin-top: 20px;
 }
 input,
 textarea {
@@ -92,6 +95,10 @@ img {
 }
 .chimney {
   margin: 50px 0;
+  border: 1px solid #e0e0e0;
+  padding: 20px;
+  background: #f3f3f3;
+  border-radius: 4px;
 }
 .flex-block {
   display: -ms-flexbox;
