--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -83,7 +83,7 @@ img
 
 .page
     background: white
-    padding: 50px 0
+    padding: 150px 0
 
 
 .chimney
@@ -133,6 +133,7 @@ img
     background: #EE8B24
     font-weight: bold
     padding: 0
+    box-shadow: 0 1px 5px 0px #525252
 
     span
         margin: 0 10px
@@ -156,7 +157,7 @@ section
     display: flex
     justify-content: center
     align-items: center
-    padding: 50px 0
+    padding: 150px 0
     min-height: calc(100vh - 177px) !important
 
 .section-main
@@ -280,6 +281,7 @@ h3
     border: none
 
 .table
+    background: white
     margin-top: 30px
     font-size: 12px
     //border: 1px solid black
