--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -83,7 +83,10 @@ img
 
 .page
     background: white
-    padding: 150px 0
+    padding: 150px 0 50px
+
+.admin .page
+    padding: 50px 0
 
 
 .chimney
@@ -141,6 +144,17 @@ img
     @media screen and (max-width: 768px)
         text-align: center
 
+.search-input
+    box-shadow: inset 1px 4px 9px -6px
+
+.search-button
+    position: absolute
+    top: 13px
+    right: 0
+    font-size: 20px
+    color: #666
+    background: none
+    border: none
 
 .navbar-toggle
     background: #ee8b24 !important
