--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -89,13 +89,28 @@ img
     padding: 50px 0
 
 
-.chimney
+.chimney,
+.article
     margin: 50px 0
     clear: fix
     border: 1px solid #E0E0E0
     padding: 20px
     background: #F3F3F3
     border-radius: 4px
+
+.article
+    min-height: 550px
+    position: relative
+
+    .buttons
+        position: absolute
+        bottom: 20px 
+        right: 20px
+        width: 100%
+
+.static
+    position: static
+    padding-bottom: 30px
 
 .flex-block
     display: flex
