add controller, model, model factory, seeder, migration and views for CRUD operations with photos

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -115,6 +115,28 @@ img {
   right: 20px;
   width: 100%;
 }
+.photo {
+  min-height: 296px;
+  position: relative;
+  padding-bottom: 50px;
+}
+.photo .thumbnail {
+  margin: 0;
+  padding: 0;
+}
+.buttons-centered {
+  padding-top: 20px;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+.buttons-centered a,
+.buttons-centered button {
+  float: none !important;
+  display: inline-block;
+}
 .static {
   position: static;
   padding-bottom: 30px;
