--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -81,6 +81,7 @@ img
             a
                 color: black 
 
+
 .page
     background: white
     padding: 150px 0 50px
@@ -98,6 +99,7 @@ img
     background: #F3F3F3
     border-radius: 4px
 
+
 .article
     min-height: 550px
     position: relative
@@ -107,6 +109,28 @@ img
         bottom: 20px 
         right: 20px
         width: 100%
+
+.photo
+    min-height: 296px
+    position: relative
+    padding-bottom: 50px
+
+.photo .thumbnail
+    margin: 0
+    padding: 0
+
+.buttons-centered
+    padding-top: 20px
+    text-align: center
+    position: absolute
+    bottom: 0
+    right: 0
+    left: 0
+
+    a,
+    button
+        float: none !important
+        display: inline-block
 
 .static
     position: static
