--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,10 +7,23 @@ select.form-control {
   border-color: #868686 !important;
 }
 body {
-  background-color: #2c2c2c;
+  background: #fff;
 }
 .description {
   font-size: 18px;
+}
+.order-header-button {
+  margin: 3px;
+  border-radius: 0 !important;
+  background: #ff4700;
+  border: none;
+  height: 32px;
+  padding: 3px 10px;
+  margin-top: 9px;
+  box-shadow: 0 0 3px 0px #222;
+}
+.order-header-button:hover {
+  background: #e64000;
 }
 .table-block {
   overflow: auto;
@@ -53,16 +66,25 @@ img {
   margin: 0 auto;
 }
 .contacts {
-  display: inline-block;
-  margin-left: 30px;
-  font-size: 14px;
-  font-weight: bold;
-  padding-top: 0;
-  color: #aaa;
-  height: 100%;
+  margin: 15px 0;
+  color: #bbb;
+}
+.contacts-small-screen {
+  display: none;
 }
 @media screen and (max-width: 768px) {
-  .contacts {
+  .contacts-small-screen {
+    display: inline-block;
+    margin-left: 30px;
+    font-size: 14px;
+    font-weight: bold;
+    padding-top: 0;
+    color: #aaa;
+    height: 100%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .contacts-small-screen {
     padding: 10px 0;
   }
 }
@@ -87,6 +109,9 @@ img {
 .page {
   background: #fff;
   padding: 150px 0 50px;
+}
+body.admin {
+  background: #2c2c2c;
 }
 .admin .page {
   padding: 50px 0;
@@ -159,7 +184,7 @@ img {
   margin-top: 150px;
 }
 .search i {
-  color: #ee8b24;
+  color: #000;
 }
 .search_input {
   border: none;
@@ -170,6 +195,10 @@ img {
   font-size: 16px;
   font-weight: bold;
   padding: 0 10px;
+  background: #b5aea7;
+}
+.search_input:focus {
+  background: #fff;
 }
 .top-line {
   min-height: 30px;
@@ -178,7 +207,7 @@ img {
   font-weight: bold;
   font-size: 16px;
   padding-top: 4px;
-  background: #ee8b24;
+  background: #6f6356;
   font-weight: bold;
   padding: 0;
   box-shadow: 0 1px 5px 0px #525252;
@@ -191,17 +220,20 @@ img {
     text-align: center;
   }
 }
-.search-input {
-  box-shadow: inset 1px 4px 9px -6px;
+.search_input {
+  box-shadow: 0 0 5px 0px #222;
 }
 .search-button {
   position: absolute;
   top: 13px;
   right: 0;
   font-size: 20px;
-  color: #666;
+  color: #000;
   background: none;
   border: none;
+}
+.slick-carousel img {
+  max-height: 300px;
 }
 .navbar-toggle {
   background: #ee8b24 !important;
@@ -2938,7 +2970,7 @@ textarea:hover {
   color: #fff;
 }
 ul.navbar-nav > li > a:hover {
-  background: #ee8b24 !important;
+  background: #6f6356 !important;
   color: #fff !important;
 }
 @media screen and (max-width: 768px) {
@@ -2978,7 +3010,7 @@ tr td:first-child {
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus {
-  background: #ee8b24;
+  background: #6f6356;
   color: #fff !important;
 }
 .navbar-inverse .navbar-nav > li > a {
