--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -202,7 +202,7 @@ body.admin
     background: #6f6356 //#EE8B24
     font-weight: bold
     padding: 0
-    box-shadow: 0 1px 5px 0px #525252
+ //   box-shadow: 0 1px 5px 0px #525252
 
     span
         margin: 0 10px
