--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -114,7 +114,7 @@ body.admin
 
 
 .chimney,
-.article
+.admin .article
     margin: 50px 0
     clear: fix
     border: 1px solid #E0E0E0
@@ -123,7 +123,7 @@ body.admin
     border-radius: 4px
 
 
-.article
+.admin .article
     min-height: 550px
     position: relative
 
@@ -137,6 +137,10 @@ body.admin
     min-height: 296px
     position: relative
     padding-bottom: 50px
+
+.article-text
+    font-size: 18px
+    margin: 30px 0
 
 .photo .thumbnail
     margin: 0
@@ -202,7 +206,6 @@ body.admin
     background: #6f6356 //#EE8B24
     font-weight: bold
     padding: 0
- //   box-shadow: 0 1px 5px 0px #525252
 
     span
         margin: 0 10px
