--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,12 @@
 h3 {
   text-transform: none !important;
 }
+.order {
+  font-size: 20px;
+}
+.order ul li {
+  margin: 10px 0;
+}
 input.form-control,
 textarea.form-control,
 select.form-control {
@@ -117,12 +123,14 @@ body.admin {
   padding: 50px 0;
 }
 .chimney:after,
+.order:after,
 .admin .article:after {
   content: '';
   display: block;
   clear: both;
 }
 .chimney,
+.order,
 .admin .article {
   margin: 50px 0;
   border: 1px solid #e0e0e0;
