--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -1,6 +1,12 @@
 h3
     text-transform: none !important
 
+.order
+    font-size: 20px
+
+    ul li
+        margin: 10px 0
+
 input.form-control,
 textarea.form-control,
 select.form-control
@@ -114,6 +120,7 @@ body.admin
 
 
 .chimney,
+.order,
 .admin .article
     margin: 50px 0
     clear: fix
