--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -1,6 +1,16 @@
 h3
     text-transform: none !important
 
+.search-results
+    background: green
+    font-size: 18px
+    padding: 20px
+    color: white
+    display: inline-block
+
+.query-string
+    color: yellow
+
 .order
     font-size: 20px
 
