--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -42,6 +42,12 @@ body
     &:hover
         background: darken(#ff4700, 10%)
 
+    &:focus
+        background: darken(#ff4700, 10%)
+
+    &:active:focus
+        background: darken(#ff4700, 10%)
+
 .table-block
     overflow: auto
 
@@ -214,7 +220,7 @@ body.admin
 
 
 .top-line
-    min-height: 30px
+    min-height: 50px
     text-align: right
     color: white
     font-weight: bold
